# dotbot-pipx

./: .gitignore  .pdm-python  pipx.py  pyproject.toml
