[project]
name = "dotbot-pipx"
dynamic = ["version"]
urls = { "Source" = "https://github.com/sijanc147/dotbot-pipx", "Bug Tracker" = "https://github.com/sijanc147/dotbot-pipx/issues" }
description = "Dotbot plugin to install pipx packages"
requires-python = ">=3.8"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["dotbot>=1.19.2", "debugpy>=1.6.7"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-final-newline",
    "invalid-name",
    "line-too-long",
    "unspecified-encoding",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
]

[tool.pdm.scripts]
test.cmd = [
    "python",
    "-m",
    "dotbot",
    "--only",
    "{args:pipxfile}",
    "-p",
    "pipx.py",
    "-c",
    "example.conf.yml",
]
